hphp/hack/test/typecheck/unbound_name/function_pointer.php.exp
File "function_pointer.php", line 10, characters 8-16:
Unbound name: `not_found` (a global function) (Naming[2049])
File "function_pointer.php", line 10, characters 8-16:
Unbound name (typing): `not_found` (Typing[4107])
