hphp/hack/test/typecheck/unbound_name/function_pointer.php
<?hh

function foo(): void {}

function test(): void {
  // No problem
  $x = foo<>;

  // Unbound name
  $y = not_found<>;
}
